# Python_Laba_2_4

./: README.md  pyproject.toml
src/: async_queue.py  collector.py  context_manager.py  descriptors.py  exceptions.py  executor.py  handlers.py  lazy_filters.py  logger.py  main.py  models.py  queue.py  sources.py
tests/: test_for_all.py  test_for_laba4.py
