[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Python_Laba_2_4"
version = "0.1.0"
description = "Лабораторная работа №4. Асинхронный исполнитель задач"
authors = [
    {name = "Sleptsov Misha", email = "-"}
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "isort", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true